--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ h3 {
 .place {
   font-weight: bold;
   font-size: 15px;
+  display: table;
 }
 
 .title {
@@ -28,6 +29,7 @@ h3 {
   font-style: italic;
   text-align: right;
   font-size: 15px;
+  display: table;
 
 }
 
